* Subclassed oschandlers, moving more general parts into shared

5/20/2014
* Added group update functions to oschandlers.py
* Added params to field.update_cell
* Added params to cell.update
* Changed all tuple pair representations of m_location to m_x and m_y
* Converted everything from radius to diameter
* Made RAD_PAD (not DIAM_PAD) additive not multiplicative (and only in the graphics engine)
* Added geo data handler
* Added geo fieldelement routines to add data to Cell class
* Half implemented suspect system for groups
* Made all sorts of group checks and mhousekeeping work
* Made group render routines work so you can see the groups drawn
* 'nans' if they are received from the tracker go to None rather than zero

5/24/2014
* Implemented conductor messages to visual subsys
* Added age_and_expire_connections func
* Added update_all_connections func
* Added testing funcs: grouped, contact, nearby, strangers, and fusion
* Implemented rollcall
* Implemented flex system for adjusting decay
* Implemented flex system for adjusting distances
* Added OSC to tell when conx attr is retired

5/26/2014
* Remove symbolic links (bst)
* Remove .DS_Store files (bst)
* Removed osc subdir from git (bst)
* Added pyOSC-3.7 OSC.py (bst)
* Added error handling in MyOSCHandler constructor (bst)
* Add ../shared to sys.path (bst)
* Moved most render functionality to draw functions to simplify
* Added update func to graphelements/Line
* Added severl line style choices in graphelements/Line
* Added a render func in circle and line that does all the calc that was 
    formerly done in update
* Added a smarter line drawing routine even for test curves (which look cool)

5/27/2014
* Diagnosed a prob where the connectors of deleted cells were being drawn to 
    their former locations
* Readded pathgrid routines
* Rejiggered path scaling routines based on new scheme
* Added exception handling for keyboard interupt
* To visual sys, added capability to draw pathgrid (press SPACE)
